--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "icons:normalize": "node scripts/normalize-viewbox.mjs",
-    "icons:gen": "svgr --typescript --icon --out-dir shared/icon public/icon",
+    "icons:gen": "svgr --typescript --icon --out-dir components/atom/icon public/icon",
     "icons:build": "pnpm icons:normalize && pnpm icons:gen"
   },
   "dependencies": {
@@ -33,5 +33,6 @@
     "fast-glob": "^3.3.3",
     "svgo": "^4.0.0",
     "typescript": "^5"
-  }
+  },
+  "packageManager": "pnpm@9.15.1+sha512.1acb565e6193efbebda772702950469150cf12bcc764262e7587e71d19dc98a423dff9536e57ea44c49bdf790ff694e83c27be5faa23d67e0c033b583be4bfcf"
 }
